--- a/about.css
+++ b/about.css
@@ -34,6 +34,9 @@
     line-height: 38px;
     letter-spacing: 0%;
     text-align: center;
+    box-sizing: border-box;
+    border-bottom: 1px solid rgba(16, 16, 16, 0.2);
+    border-top: 1px solid rgba(16, 16, 16, 0.2);
 }
 #about .text{
     display: flex;
