--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 #about {
   display: flex;
   border: 1px solid black;
+  justify-content: center;
 }
 #about .img > img {
   width: 645px;
@@ -23,7 +24,7 @@
     font-weight: 500;
     line-height: 28px;
     letter-spacing: 0%;
-    text-align: left;
+    text-align: center;
 }
 #about .text h3{
     opacity: 0.7;
