--- a/social.css
+++ b/social.css
@@ -1,6 +1,6 @@
 .Social {
   /* background-image: url("assets/social-bg.png"); */
-  width: 1295px;
+  /* width: 1295px; */
   height: 450px;
   display: flex;
   align-items: center;
