--- a/about.css
+++ b/about.css
@@ -2,10 +2,12 @@
   display: flex;
   border: 1px solid black;
   justify-content: center;
+  width: 1200px;
+  margin: 0 auto;
 }
 #about .img > img {
-  width: 645px;
-  height: 450px;
+  width: 100%;
+  height: 100%;
 }
 #about .text h1 {
   color: rgb(16, 16, 16);
@@ -45,6 +47,7 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
+    width: 100%;
 }
 #icon{
     display: flex;
